--- a/src/app/common-ui/profile-card/profile-card.component.html
+++ b/src/app/common-ui/profile-card/profile-card.component.html
@@ -1,5 +1,19 @@
-<p>Карта 1</p>
-<p>Карта 2</p>
-<p>Карта 3</p>
-<p>Карта 4</p>
-<p>Карта 5</p>
+<div class="profile-card">
+  <div class="avatar-name">
+    <img src="/assets/imgs/av1.png" alt="avatar" class="profile-card__avatar">
+    <div class="profile-card__name">
+      <strong>Vladyslav Skopenko</strong>
+      <span>vlad</span>
+    </div>
+  </div>
+  <div class="profile-card__description">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+  </div>
+  <div class="profile-card__tags">
+    <div class="skill-tag" >Angular</div>
+    <div class="skill-tag" >HTML</div>
+    <div class="skill-tag" >CSS</div>
+    <div class="skill-tag" >REST</div>
+    <div class="skill-tag" >TEKRATHEBEST</div>
+  </div>
+</div>
