--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,12 @@ body {
   background: var(--dark-color);
   color: var(--white-color);
 }
+
+.skill-tag {
+  padding: 4px 8px;
+  border-radius: 4px;
+  border: 1px solid var(--white-color);
+  display: inline;
+  font-size: 12px;
+  font-weight: 700;
+}
