--- a/src/app/common-ui/profile-card/profile-card.component.html
+++ b/src/app/common-ui/profile-card/profile-card.component.html
@@ -16,4 +16,7 @@
     <div class="skill-tag" >REST</div>
     <div class="skill-tag" >TEKRATHEBEST</div>
   </div>
+  <div class="profile-card__action-btns">
+    <button class="btn">Follow</button>
+  </div>
 </div>
