--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 :root {
   --dark-color: #000000;
   --white-color: #FFFFFF;
+  --primary-color: #AE7AFF;
 }
 
 
@@ -16,4 +17,14 @@ body {
   display: inline;
   font-size: 12px;
   font-weight: 700;
+}
+
+.btn {
+  border: none;
+  background: var(--primary-color);
+  color: var(--dark-color);
+  padding: 10px 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 24px;
 }
