first step finish

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,12 @@
 <h1> WELCOMNE to li-ponk</h1>
-<app-profile-card>12</app-profile-card>
+<app-profile-card></app-profile-card>
+<app-profile-card></app-profile-card>
+<app-profile-card></app-profile-card>
+<app-profile-card></app-profile-card>
+<app-profile-card></app-profile-card>
+<app-profile-card></app-profile-card>
+<app-profile-card></app-profile-card>
+<app-profile-card></app-profile-card>
+<app-profile-card></app-profile-card>
+
+
