--- a/src/app/common-ui/profile-card/profile-card.component.html
+++ b/src/app/common-ui/profile-card/profile-card.component.html
@@ -2,8 +2,8 @@
   <div class="avatar-name">
     <img src="/assets/imgs/av1.png" alt="avatar" class="profile-card__avatar">
     <div class="profile-card__name">
-      <strong>Vladyslav Skopenko</strong>
-      <span>vlad</span>
+      <strong class="h6" >Vladyslav Skopenko</strong>
+      <span class="subtitle" >skopilk</span>
     </div>
   </div>
   <div class="profile-card__description">
@@ -15,6 +15,7 @@
     <div class="skill-tag" >CSS</div>
     <div class="skill-tag" >REST</div>
     <div class="skill-tag" >TEKRATHEBEST</div>
+    <div class="skill-tag" >TYPESCRIPT</div>
   </div>
   <div class="profile-card__action-btns">
     <button class="btn">Follow</button>
