--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@import "fonts";
+
 :root {
   --dark-color: #000000;
   --white-color: #FFFFFF;
@@ -6,6 +8,7 @@
 
 
 body {
+  font-family: "JetBrains Mono", sans-serif;
   background: var(--dark-color);
   color: var(--white-color);
 }
@@ -17,6 +20,8 @@ body {
   display: inline;
   font-size: 12px;
   font-weight: 700;
+  line-height: 24px;
+  margin-right: 4px;
 }
 
 .btn {
@@ -28,3 +33,15 @@ body {
   font-size: 14px;
   line-height: 24px;
 }
+
+.h6 {
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 800;
+}
+
+.subtitle {
+  font-size:  14px;
+  line-height: 20px;
+}
+
