--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,10 @@
 <h1> WELCOMNE to li-ponk</h1>
 <app-profile-card></app-profile-card>
 <app-profile-card></app-profile-card>
-<app-profile-card></app-profile-card>
-<app-profile-card></app-profile-card>
-<app-profile-card></app-profile-card>
-<app-profile-card></app-profile-card>
-<app-profile-card></app-profile-card>
-<app-profile-card></app-profile-card>
-<app-profile-card></app-profile-card>
+
+
+<pre>
+  {{ profiles  | json}}
+</pre>
 
 
