add profile in html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
-<h1> WELCOMNE to li-ponk</h1>
-<app-profile-card></app-profile-card>
-<app-profile-card></app-profile-card>
+<h1> WELCOME to li-ponk</h1>
+<div class="profile-card__wrapper">
+@for (profile of profiles; track profile.id) {
+    <app-profile-card
+      [profile]="profile">
+    </app-profile-card>
+}
+</div>
 
 
-<pre>
-  {{ profiles  | json}}
-</pre>
 
 
