--- a/src/app/common-ui/profile-card/profile-card.component.scss
+++ b/src/app/common-ui/profile-card/profile-card.component.scss
@@ -2,7 +2,7 @@
   border: 1px solid var(--white-color);
   padding: 32px 24px;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(2, 1fr)  250px 1fr;
   grid-gap: 32px;
 }
 
@@ -23,4 +23,12 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+}
+
+.profile-card__tags {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 5px;
+  gap: 4px;
+  height: auto;
 }
