--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,2 @@
-<h1> WELCOME to li-ponk</h1>
-<div class="profile-card__wrapper">
-@for (profile of profiles; track profile.id) {
-    <app-profile-card
-      [profile]="profile">
-    </app-profile-card>
-}
-</div>
-
-
-
+<router-outlet></router-outlet>
 
