add style and connect login

--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,1 +1,13 @@
-<p>login-page works!!!!!!!!!!!!!!!!</p>
+<form action="" class="login-form">
+  <h1 class="h1">Login</h1>
+  Username
+  <label class="lp-control-label">
+    <input class="lp-input"  type="text" placeholder="Enter username">
+  </label>
+  Password
+  <label class="lp-control-label">
+    <input class="lp-input" type="text" placeholder="Enter password">
+  </label>
+
+</form>
+<img src="assets/svg/li-ponk.png" alt="logo"  class="circle-image">
