--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,13 +1,16 @@
 <form action="" class="login-form">
-  <h1 class="h1">Login</h1>
+  <h1 class="h1 mb60">Login</h1>
   Username
-  <label class="lp-control-label">
+  <label class="lp-control-label mb16">
     <input class="lp-input"  type="text" placeholder="Enter username">
   </label>
   Password
-  <label class="lp-control-label">
+  <label class="lp-control-label mb32">
     <input class="lp-input" type="text" placeholder="Enter password">
   </label>
+
+  <button class="btn"> Enter </button>
+
 
 </form>
 <img src="assets/svg/li-ponk.png" alt="logo"  class="circle-image">
