--- a/src/app/pages/login-page/login-page.component.scss
+++ b/src/app/pages/login-page/login-page.component.scss
@@ -3,7 +3,7 @@
   grid-template-columns:  1fr 1fr;
   height: 100dvh;
   align-items: center;
-  margin: 0 10%;
+  margin: 0 20%;
 }
 
 
@@ -14,4 +14,5 @@
   object-fit: cover;
   background-color: transparent;
   display: block;
+  margin-left: 10%;
 }
