--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,11 @@
 @import "fonts";
+@import "margins";
 
 :root {
   --dark-color: #000000;
   --white-color: #FFFFFF;
   --primary-color: #AE7AFF;
+  --gray-color: #5F646D;
 }
 
 *,
@@ -19,7 +21,8 @@ body {
   font-family: "JetBrains Mono", sans-serif;
   background: var(--dark-color);
   color: var(--white-color);
-  background-image: url(/assets/imgs/background.jpg)
+  background-image: url(/assets/imgs/background.jpg);
+  background-size: cover;
 }
 
 .skill-tag {
@@ -34,6 +37,7 @@ body {
 }
 
 .btn {
+  width: 100%;
   border: none;
   background: var(--primary-color);
   color: var(--dark-color);
@@ -41,9 +45,26 @@ body {
   font-weight: 700;
   font-size: 14px;
   line-height: 24px;
-  width: 350px;
+  weight: 200px;
+  cursor: pointer;
+  border-radius: 4px;
+  border: 1px solid var(--dark-color);
 }
 
+.btn-shadow {
+  position: relative;
+  &:before {
+    content: '';
+    positions: absolute;
+    bottom: -4px;
+    right: -4px;
+    z-index: -1;
+    background: var(--gray-color);
+    width: 100%;
+    height: 100%;
+    border-radius: 4px;
+  }
+}
 
 .h1 {
   font-size: 48px;
@@ -67,9 +88,12 @@ body {
   font-weight: 700;
   font-size: 12px;
   line-height: 16px;
+  display: block;
+
 }
 
 .lp-input {
+  width: 100%;
   display: block;
   border: 1px solif var(--white-color);
   border-radius: 4px;
@@ -79,4 +103,5 @@ body {
   font-size:14px;
   line-height: 21px;
   font-family: "JetBrains Mono", sans-serif;
+  color: var(--white-color);
 }
