fis css and add id for html element

--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -6,13 +6,13 @@
 
   <label class="lp-control-label mb16">
     Username
-    <input formControlName="username"
+    <input formControlName="username" id="usernamelogin"
       class="lp-input"  type="text" placeholder="Enter username">
   </label>
 
   <label class="lp-control-label mb32">
     Password
-    <input formControlName="password"
+    <input formControlName="password" id="password"
       class="lp-input" type="text" placeholder="Enter password">
   </label>
 
