--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -6,7 +6,7 @@
 
   <label class="lp-control-label mb16">
     Username
-    <input formControlName="username" id="usernamelogin"
+    <input formControlName="username" id="username"
       class="lp-input"  type="text" placeholder="Enter username">
   </label>
 
