--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -12,8 +12,22 @@
 
   <label class="lp-control-label mb32">
     Password
-    <input formControlName="password" id="password"
-      class="lp-input" type="text" placeholder="Enter password">
+    <div class="password-input">
+      <input formControlName="password"
+            id="password"
+            class="lp-input"
+            [type]="isPasswordVisible() ? 'text' : 'password'"
+            placeholder="Enter password">
+        <button class='password-eye-btn'
+                type="button"
+                [class.active]="isPasswordVisible()"
+                (click)="isPasswordVisible.set(!isPasswordVisible())"
+        >
+            <svg width="19" height="19" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 5C7 5 2 12 2 12s5 7 10 7 10-7 10-7-5-7-10-7zm0 11c-2.8 0-5-2.2-5-5s2.2-5 5-5 5 2.2 5 5-2.2 5-5 5zm0-8.5c-1.4 0-2.5 1.1-2.5 2.5S10.6 12 12 12s2.5-1.1 2.5-2.5S13.4 7.5 12 7.5z" fill="currentColor"/>
+            </svg>
+        </button>
+    </div>
   </label>
 
   <button class="btn btn-shadow" type="submit"> Enter </button>
