--- a/src/app/common-ui/sidebar/sidebar.component.html
+++ b/src/app/common-ui/sidebar/sidebar.component.html
@@ -1,13 +1,15 @@
-<p>sidebar works!</p>
-<p>sidebar works!</p>
-<p>sidebar works!</p>
-<p>sidebar works!</p>
-<p>sidebar works!</p>
-<p>sidebar works!</p>
-<p>sidebar works!</p>
-<p>sidebar works!</p>
-<p>sidebar works!</p>
-<p>sidebar works!</p>
-<p>sidebar works!</p>
-<p>sidebar works!</p>
+<img src="/assets/svg/li-ponk.png"
+     alt="logo"
+     class="small_logo .ml16 "
+>
 
+<nav>
+  <ul class="main-menu-list">
+    <li>
+      <button class="menu-item">
+      <img src="/assets/svg/home.jfif" alt="logo" class="main-menu-icon">
+      <span> My profile </span>
+      </button>
+    </li>
+  </ul>
+</nav>
