--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@
   --white-color: #FFFFFF;
   --primary-color: #AE7AFF;
   --gray-color: #5F646D;
+  --dark-hover-color: #161616;
 }
 
 *,
@@ -21,7 +22,7 @@ body {
   font-family: "JetBrains Mono", sans-serif;
   background: var(--dark-color);
   color: var(--white-color);
-  background-image: url(/assets/imgs/background.jpg);
+  background-image: url(/assets/svg/background.jfif);
   background-size: cover;
 }
 
