--- a/src/app/common-ui/sidebar/sidebar.component.html
+++ b/src/app/common-ui/sidebar/sidebar.component.html
@@ -1,15 +1,14 @@
-<img src="/assets/svg/li-ponk.png"
+<img src="/assets/imgs/li-ponk.png"
      alt="logo"
      class="small_logo .ml16 "
 >
 
 <nav>
   <ul class="main-menu-list">
-    <li>
+    <li *ngFor="let menuItem of menuItems">
       <button class="menu-item">
-        <svg icon="home" class="home_icon">
-        </svg>
-        <span> My profile </span>
+        <svg [icon]="menuItem.icon" class="main-menu-icon"></svg>
+        <span>{{ menuItem.label }}</span>
       </button>
     </li>
   </ul>
