--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,7 +22,7 @@ body {
   font-family: "JetBrains Mono", sans-serif;
   background: var(--dark-color);
   color: var(--white-color);
-  background-image: url(/assets/svg/background.jfif);
+  background-image: url(/assets/imgs/background.jfif);
   background-size: cover;
 }
 
