--- a/src/app/common-ui/sidebar/sidebar.component.html
+++ b/src/app/common-ui/sidebar/sidebar.component.html
@@ -13,3 +13,14 @@
     </li>
   </ul>
 </nav>
+
+<p class="medium-text mb20">Followers</p>
+<!--<app-subscriber-card></app-subscriber-card>-->
+
+<div class="mt20 to-subscribers">
+  <a
+    [routerLink]="['/subscribes']"
+    class="to-subscribers-link medium-text">
+    All subscribers</a>
+  <svg [icon]="arrow" class="to-subscribers-icon"></svg>
+</div>
