--- a/src/app/common-ui/sidebar/sidebar.component.scss
+++ b/src/app/common-ui/sidebar/sidebar.component.scss
@@ -1,6 +1,7 @@
 :host {
   display:block;
   padding: 20px 12px;
+  background-color: #0d0d0d;
 }
 
 .small_logo {
@@ -47,4 +48,21 @@
 .main-menu-icon {
     width: 16px;
     height: 16px;
+}
+
+.to-subscribers {
+  display: flex;
+  gap: 10px;
+  align-items: center
+}
+
+.to-subscribers-link {
+  color: var(--primary-color);
+  text-decoration: none;
+}
+
+.to-subscribers-icon {
+  width: 18px;
+  height: 18px;
+
 }
