--- a/src/app/common-ui/sidebar/sidebar.component.scss
+++ b/src/app/common-ui/sidebar/sidebar.component.scss
@@ -1,7 +1,8 @@
 :host {
   display:block;
   padding: 20px 12px;
-  background-color: #0d0d0d;
+  background-color: #171717;
+  height: 100vh;
 }
 
 .small_logo {
