--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -34,4 +34,4 @@
 
 
 </form>
-<img src="assets/imgs/li-ponk.png" alt="logo"  class="circle-image">
+<img src="assets/imgs/li-ponk.jfif" alt="logo"  class="circle-image">
