add new interface

--- a/src/app/common-ui/sidebar/sidebar.component.html
+++ b/src/app/common-ui/sidebar/sidebar.component.html
@@ -15,6 +15,9 @@
 </nav>
 
 <p class="medium-text mb20">Followers</p>
+<pre>{{ subscribers$ | async}} </pre>
+
+
 <!--<app-subscriber-card></app-subscriber-card>-->
 
 <div class="mt20 to-subscribers">
