--- a/src/app/common-ui/sidebar/sidebar.component.html
+++ b/src/app/common-ui/sidebar/sidebar.component.html
@@ -15,10 +15,13 @@
 </nav>
 
 <p class="medium-text mb20">Followers</p>
-<pre>{{ subscribers$ | async}} </pre>
+@for (profile of subscribers$ | async; track profile.id){
+  <app-subscriber-card
+    [profile]="profile">
+  </app-subscriber-card>
+}
 
 
-<!--<app-subscriber-card></app-subscriber-card>-->
 
 <div class="mt20 to-subscribers">
   <a
