--- a/src/app/common-ui/layout/layout.component.scss
+++ b/src/app/common-ui/layout/layout.component.scss
@@ -1,4 +1,10 @@
 :host {
   display: grid;
   grid-template-columns: 300px 1fr;
+  height: 100dvh;
+}
+
+.workspace {
+  padding: 30px;
+  background-color: #212121;
 }
