--- a/src/app/common-ui/profile-card/profile-card.component.html
+++ b/src/app/common-ui/profile-card/profile-card.component.html
@@ -1,7 +1,9 @@
 @if (profile) {
   <div class="profile-card">
     <div class="avatar-name">
-      <img [src]="profile.avatarUrl" alt="avatar" class="profile-card__avatar">
+      <img [src]="profile.avatarUrl"
+           (error)="onError()"
+           alt="avatar" class="profile-card__avatar">
       <div class="profile-card__name">
         <strong class="h6">{{ profile.firstName }}  {{ profile.lastName}}</strong>
         <span class="subtitle">{{ profile.username }}</span>
