--- a/src/styles.scss
+++ b/src/styles.scss
@@ -75,6 +75,21 @@ body {
 
 }
 
+.h4 {
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 32px;
+}
+
+.regular {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+}
+
+
 .h6 {
   font-size: 18px;
   line-height: 24px;
